<resources>
    <string name="app_name">GeoMinder</string>

    <!--    Login & SignUp -->
    <string name="login_button">Sign In</string>
    <string name="signup_button">Sign Up</string>
    <string name="account_reminder">Don\'t Have an Account? Sign Up Now</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="notifications_title">Notifications</string>
    <string name="login_separator">OR</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="signup_reminder1">Already have an account? </string>
    <string name="signup_reminder2"> Sign up</string>
    <string name="login_reminder1">Have an account? </string>
    <string name="login_reminder2"> Sign in</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Invalid email address format</string>
    <string name="invalid_password">Must be at least 8 characters long and have a special character</string>
    <string name="invalid_confirm_pass">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">
353671617878-i2nao1n5011nl5pddf5mafq1k34i2ig1.apps.googleusercontent.com</string>

    <!--    note View -->
    <string name="welcome_string">Welcome to GeoMinder!</string>
    <string name="start_text">Add your first task reminder</string>
    <string name="search_hint">Search</string>

    <!--    note hints -->
    <string name="title_hint">Title</string>
    <string name="time_hint">Add a Date and Time</string>
    <string name="location_hint">Add a Location</string>
    <string name="group_note_hint">Add a Group</string>
    <string name="description_hint">Add a Description</string>

    <!--    note creator -->
    <string name="date_time_icon">Date and Time</string>
    <string name="place_icon">Place</string>
    <string name="group_icon">Groups</string>
    <!--    -->

    <!--    Groups View -->
    <string name="group_title">Groups</string>
    <string name="add_button">Add Button</string>

    <!--  Groups Editor -->
    <string name="group_name">Group name</string>
    <string name="group_desc">Group description</string>
    <string name="search_user">Search for users....</string>
    <string name="user_title">Users</string>
    <string name="create_group_button">Create Group</string>


    <!--    profile stuff, basically  -->
    <string name="profile_name">-</string>
    <string name="placeholder_email">-</string>
    <string name="placeholder_password">*</string>
    <string name="placeholder_count">0</string>
    <string name="note_count">Notes Count</string>
    <string name="note_active">Notes Active</string>
    <string name="button_content_description">Continue</string>
    <string name="group_hint">Groups</string>
    <string name="current_pass_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_pass_hint">Confirm New Password</string>
    <string name="update_pass_button">Update Password</string>
    <string name="update_email_button">Update Email</string>
    <string name="search_bar_hint">Search Notes</string>
    <string name="profile_name_hint">Name</string>
    <string name="update_name_button">Update Name</string>

    <!--    -->
    <string name="edit_status">Edited</string>

    <!--    settings-->
    <string name="settings_title">Settings</string>
    <string name="profile_settings">Profile</string>
    <string name="permission_settings">Device Permission</string>
    <string name="map_settings">Map</string>
    <string name="data_settings">Data Sync and Storage</string>
    <string name="help_settings">Help</string>
    <string name="appearance_settings">Appearance</string>
    <string name="notification_settings">Notification</string>

    <!--    -->
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

    <!--  Toolbar  -->
    <string name="save">Save</string>
    <string name="back">Back</string>
    <!-- Preference Titles -->
    <string name="permission_header">Device Permission</string>
    <string name="map_header">Maps</string>
    <string name="data_header">Data Sync and Storage</string>
    <string name="appearance_header">Appearance</string>
    <string name="help_header">Help</string>
    <string name="notification_header">Notification</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="storage_header">Storage</string>
    <string name="backup_header">Backup and Recovery</string>
    <string name="security_header">Data Privacy and Security</string>
    <!--    Data Preferences stuff-->
    <string name="sync_freq_title">Sync Frequency</string>
    <string name="help_about">About the project</string>
    <string name="version_display">Version Number</string>
    <string name="version_number">v1.0</string>
    <string name="theme_header">Theme</string>
    <string name="notification_delay">Set Notification Delay</string>
    <string name="notification_strength">Notification Strength</string>
    <string name="enable_vibration">Vibration</string>
    <string name="vibration_mode">Vibration Mode\n</string>
    <string name="vibration_length">Vibration Length\n</string>
    <string name="logout_hint">Log Out</string>
</resources>