<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">
    <EditText
        android:id="@+id/currentEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/emailConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <Button
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:id="@+id/changeEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_email_button"/>


</LinearLayout>