<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">
    <EditText
        android:id="@+id/currentPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_pass_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_pass_hint"
        android:inputType="textPassword"/>

    <Button
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/lightgreen"
        android:id="@+id/changePasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pass_hint"/>


</LinearLayout>