<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="64dp"
    tools:context=".LoginFragment"
    android:id="@+id/signupFragment"
    android:theme="@style/Base.Theme.GeoMinder"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/signup_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.21" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_emailTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_app_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailValidationWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Invalid email address format (use email@provider.domain)"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/signup_emailTextLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="64dp"
        android:paddingEnd="64dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailValidationWarning">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pwdValidationWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password must be at least 8 characters long and have a special character,"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/passwordTextLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="64dp"
        android:paddingEnd="64dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPassTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/pwdValidationWarning"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            app:boxStrokeColor="@color/error"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirmValidationWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Passwords do not match"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/confirmPassTextLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingStart="64dp"
        android:paddingEnd="64dp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/signup_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmValidationWarning" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        android:id="@+id/signup_redirect_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_reminder1"
            android:textColor="@android:color/black"
            android:layout_marginEnd="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_redirect"
            android:text="@string/login_reminder2"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:clickable="true" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_seperator_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_redirect_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OR"
            android:textFontWeight="700"
            android:textSize="20dp"
            android:id="@+id/signup_seperator_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/signup_seperator_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSignUpButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

