<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.SettingsFragment">

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/profileSettingButton"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileSettingButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:padding="24dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/profile_setting_icon"
            android:background="@drawable/baseline_account_box_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_setting_icon"
            android:layout_marginStart="16dp"
            android:text="@string/profile_settings"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationSettingsButton"
        app:layout_constraintTop_toBottomOf="@+id/profileSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/location_setting_icon"
            android:background="@drawable/baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_setting_icon"
            android:layout_marginStart="16dp"
            android:text="@string/location_settings"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mapSettingsButton"
        app:layout_constraintTop_toBottomOf="@+id/locationSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/map_setting_icon"
            android:background="@drawable/baseline_map_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/map_setting_icon"
            android:layout_marginStart="16dp"
            android:text="@string/map_settings"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dataSettingsButton"
        app:layout_constraintTop_toBottomOf="@+id/mapSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/data_setting_icon"
            android:background="@drawable/baseline_insert_drive_file_24"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/data_setting_icon"
            android:layout_marginStart="16dp"
            android:text="@string/data_settings"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/helpSettingButton"
        app:layout_constraintTop_toBottomOf="@+id/dataSettingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/help_setting_icon"
            android:background="@drawable/baseline_help_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/colorPrimary"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/help_setting_icon"
            android:layout_marginStart="16dp"
            android:text="@string/profile_settings"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>